--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+  <head> 
     <meta charset="utf-8">
     <title>Unit 4, Part 2: HTML/CSS Practice</title>
     <!-- Used for automated testing -->
@@ -12,9 +12,16 @@
 
   </head>
   <body>
+    <header>
     <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
     <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
-
+    </header>
+    <div class ="info">
+      <h2>My name is Jaylyn Etienne</h2>
+      <img src="https://img.autobytel.com/chrome/colormatched/white/640/cc_2016hyc020020_640/cc_2016hyc020020_640_y8.jpg" alt="2016 elantra">
+    <h3> My car is a 2016 Elantra and, despite the mess i sometimes leave, that car is my baby and i love her like a child</h3>
+    </div>
+</body>
 
 
     <!-- Used for automated testing -->
